--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/BrxwnSugxr/readmeGenerator-node#readme",
   "dependencies": {
     "inquirer": "^8.2.4",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3"
   }
 }
